# server/src/routes.ts
@@ -5,6 +5,7 @@ import authController from "./controller/auth.controller";
 import userController from "./controller/user.controller";
 import stocksController from "./controller/stocks.controller";
 import newsController from "./controller/news.controller";
+import leaderboardController from "./controller/leaderboard.controller";
 
 // Auth routes
 router.post(
@@ -26,7 +27,24 @@ router.get(
 	[authJwt.verifyToken],
 	userController.getPortfolio,
 );
-router.get("/api/user/leaderboard", userController.getLeaderboard);
+router.get("/api/user/leaderboard", leaderboardController.getLeaderboard);
+
+// User watchlist routes
+router.get(
+	"/api/user/watchlist/get",
+	[authJwt.verifyToken],
+	userController.getWatchlist,
+);
+router.post(
+	"/api/user/watchlist/add/:symbol",
+	[authJwt.verifyToken],
+	userController.addToWatchlist,
+);
+router.post(
+	"/api/user/watchlist/remove/:symbol",
+	[authJwt.verifyToken],
+	userController.removeFromWatchlist,
+);
 
 // Stocks routes
 router.get("/api/stocks/search/:query", stocksController.search);
